<resources>
    <string name="oblidar"><u>¿ Has oblidat la teva contrasenya ?</u></string>
    <string name="entrar">ENTRAR</string>
    <string name="password">Contrasenya</string>
    <string name="repeatPassword">Repeteix la Contrasenya</string>
    <string name="dni">DNI</string>
    <string name="inici">Inici</string>
    <string name="buscar">Buscar</string>
    <string name="xat">Xat</string>
    <string name="notificacio">Notificació</string>
    <string name="perfil">Perfil</string>
    <string name="personalitzacio">Personalització</string>
    <string name="validacioUsuari">Validació d\'usuaris</string>
    <string name="contacte">Contacte</string>
    <string name="about">About App</string>
    <string name="tancarSessio">Tanca la Sessió</string>
    <string name="continuar">CONTINUAR</string>
    <string name="finalitzar">FINALITZAR</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="acceptarCondicions">Acceptar els termes i condicions</string>
    <string name="correu">Correu Electronic</string>
    <string name="dniProdis">DNI Usuari Prodis</string>

    <string-array name="tipus_Usuaris">
        <item>@string/usuari</item>
        <item>@string/monitor</item>
        <item>@string/familiar</item>
    </string-array>

    <string name="usuari">Usuari</string>
    <string name="monitor">Monitor</string>
    <string name="familiar">Familiar</string>

    <string-array name="tipus_Events">
        <item>@string/esports</item>
        <item>@string/musica</item>
        <item>@string/videojocs</item>
        <item>@string/art</item>
        <item>@string/pelis</item>
        <item>@string/llibres</item>
    </string-array>

    <string name="esports">Sports</string>
    <string name="musica">Music</string>
    <string name="art">Art</string>
    <string name="pelis">Películas</string>
    <string name="llibres">Libros</string>

    <string name="catala">Català</string>
    <string name="castella">Castellà</string>
    <string name="angles">Anglès</string>

    <string-array name="idiomas">
        <item>@string/catala</item>
        <item>@string/castella</item>
        <item>@string/angles</item>
    </string-array>

    <string name="nomICognoms">Nom i Cognoms</string>
    <string name="titol">Titol</string>
    <string name="descripcio">Descripció</string>
    <string name="enviar">ENVIAR</string>
    <string name="crear">CREAR</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registre">REGISTRE</string>
    <string name="seleccioUsuari">Selecciona el Tipus d\'Usuari:</string>
    <string name="termes_i_condicions">Termes i condicions</string>
    <string name="colorSorpresa">COLOR SORPRESA</string>
    <string name="color_fons">COLOR FONS</string>
    <string name="color_lleteres">COLOR LLETERES</string>


    <string name="error_4digits">La contrasenya ha de ser de 4 números.</string>
    <string name="data">Selecciona la data</string>


    <string name="aboutApp">Aquesta Aplicació mobil es una ajuda per l´empresa Prodis per facilitar-lis
    una eina amb la que els seus usuaris puguin millorar i organitzar la seva vida , d´aquesta manera podrien quedar i socialitzar
    amb companys que no saben que tenen.</string>
    <string name="propietaris">Aquesta App esta desarrollada per Marc Hernández i Adrià Tomás.</string>
    <string name="versio">Versió:</string>
    <string name="membres">Membres</string>


    <string name="inscriu_me">INSCRIURE\'M</string>
    <string name="localitzacio">Localització</string>

    <string name="Error_pujar_foto">Error al pujar la foto</string>
    <string name="Exit_pujar_foto">La foto s´ha pujat correctament</string>
    <string name="ok">OK</string>
    <string name="telematic">TELEMÀTIC</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="actualitza">ACTUALITZA</string>
    <string name="dni_usuari_prodis">DNI Usuari Prodis</string>
    <string name="app_name">Meetdis</string>

    <string name="notificacio_titol">Nou Event Creat</string>
    <string name="notificacio_descripcio">S\'ha agregat un event al Calendari.</string>

    <string name="basic_channel_id">Chnl1</string>
    <string name="channel_name">MeetdisNot</string>
    <string name="channel_description">Nullxd</string>

    <string name="camp_buit">Algún camp esta buit</string>

    <string name="seleccio_opcio">Selecciona l\'opció amb la que vols obtenir la foto</string>


    <string name="selecciona">Selecciona:</string>
    <string name="camara">CÀMERA</string>
    <string name="galeria">GALERIA</string>


    <string name="dni_invalid">DNI no vàlid</string>
    <string name="algun_camp_buit">Algún camp esta buit</string>
    <string name="error">Error</string>

    <string name="error_autenticar">S\'ha produit un error al autenticar l\'usuari</string>
    <string name="acceptar">Acceptar</string>

    <string name="constar_4_numeros">La contrasenya te que constar de 4 numeros.</string>
    <string name="contrasenyas_diferents">Has introduit contrasenyes diferents</string>
    <string name="pr_ximament">Pròximament...</string>
    <string name="videojocs">VideoGames</string>
    <string name="error_correu">Error al Correu</string>
    <string name="error_eliminar">Error en Eliminar</string>
    <string name="oferta_eliminada">Oferta Eliminada</string>
    <string name="eliminar_oferta_pregunta">¿ Segur que vols eliminar l\'oferta ?</string>
    <string name="desapuntar_me">DESAPUNTAR-ME</string>
    <string name="opcional">(Opcional)</string>
    <string name="pregunta_desapuntar_te">Segur que vols desapuntar-te de l\'oferta ?</string>
    <string name="validacio">Validació d\' Usuaris</string>
    <string name="eliminar_usuario">Segur que vols eliminar l\'usuari?</string>
    <string name="conservar">CONSERVAR</string>
    <string name="dni_noExistent_o_invalid">DNI no vàlid o no existent</string>
    <string name="idiomas">Idiomes</string>
    <string name="pregunta_sortir">Vols sortir de l\'App?</string>
    <string name="SORTIR">SORTIR</string>
    <string name="CANCELA">"CANCEL·LA "</string>


</resources>





