<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.copernic.meetdis.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="209dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/oblidar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/oblidar"
            android:textAllCaps="false"
            android:textColor="#616161"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


        <Button
            android:id="@+id/b_entra"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/entrar"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oblidar" />

        <Button
            android:id="@+id/b_registre"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/registre"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_entra" />

        <EditText
            android:id="@+id/textNom1"
            android:layout_width="209dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetdis" />

        <ImageView
            android:id="@+id/meetdis"
            android:layout_width="503dp"
            android:layout_height="234dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.381"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/meetdis"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>