<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/meetdis"
            android:layout_width="212dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/meetdis" />

        <ImageView
            android:id="@+id/imageCamara"
            android:layout_width="166dp"
            android:layout_height="156dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetdis"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/icMembres"
            android:layout_width="55dp"
            android:layout_height="66dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_members"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toEndOf="@+id/mapView"
            app:layout_constraintTop_toBottomOf="@+id/textTipus" />

        <TextView
            android:id="@+id/textTitol"
            android:layout_width="294dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes_meetdis"



            android:hint="@string/titol"
            android:inputType="textPersonName"


            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCamara" />

        <TextView
            android:id="@+id/descripcio"
            android:layout_width="265dp"
            android:layout_height="108dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes_meetdis"
            android:gravity="center"
            android:hint="@string/descripcio"

            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitol" />

        <TextView
            android:id="@+id/textTipus"
            android:layout_width="161dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes_meetdis"
            android:clickable="false"

            android:gravity="center"
            android:focusable="false"
            android:hint="@string/data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcio"
            />

        <TextView
            android:id="@+id/textData"
            android:layout_width="161dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordes_meetdis"
            android:clickable="false"

            android:gravity="center"
            android:focusable="false"
            android:hint="@string/data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcio" />


        <ImageButton
            android:id="@+id/mapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_location_oferta"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textData" />

        <TextView
            android:id="@+id/telematicText"
            android:layout_width="134dp"
            android:layout_height="27dp"
            android:layout_marginTop="68dp"
            android:text="@string/telematic"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textData" />

        <Button
            android:id="@+id/bInscriu_me"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bordes"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/inscriu_me"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button
            android:id="@+id/bDesapuntar_me"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bordes_eliminar"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/desapuntar_me"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button
            android:id="@+id/bModificar"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bordes"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/modificar"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

        <Button
            android:id="@+id/bEliminar"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bordes_eliminar"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/eliminar"
            android:textColor="@color/red_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icMembres" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
