<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cat.copernic.meetdis.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/meetdis"
            android:layout_width="374dp"
            android:layout_height="233dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/meetdis"
            tools:layout_editor_absoluteY="-31dp" />

        <EditText
            android:id="@+id/textDNI"
            android:layout_width="294dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/nomICognoms"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetdis" />

        <EditText
            android:id="@+id/textTitol"
            android:layout_width="294dp"
            android:layout_height="60dp"
            android:paddingStart="30dp"
            android:layout_marginTop="96dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/titol"
            android:inputType="textPersonName"

            android:paddingEnd="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetdis" />

        <EditText
            android:id="@+id/descripcio"
            android:layout_width="293dp"
            android:layout_height="251dp"
            android:layout_marginTop="168dp"
            android:background="@drawable/custom_input"

            android:hint="@string/descripcio"
            android:paddingTop="10dp"


            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meetdis" />

        <Button
            android:id="@+id/b_enviar"
            android:layout_width="132dp"
            android:layout_height="59dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/bordes"
            android:fontFamily="@font/pt_sans_caption"
            android:text="@string/enviar"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


